# fun-gpt

fingpt/: .gitignore  README.md  pyproject.toml
fingpt/app/: server.py
fingpt/app/entities/: apis.py
fingpt/app/utils/: analyze_ticker.py  analyze_utils.py  misc.py
